<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/BackGround"
    tools:context=".View.RegisterActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/inter_bold"
            android:text="@string/register"
            android:textAlignment="center"
            android:textColor="@color/PrimaryTxtColor"
            android:textSize="40sp" />

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/logoregister" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center"
            android:textAlignment="center"
            android:padding="10dp"
            >

            <TextView
                style="@style/TxtPrimaryStyle"
                android:fontFamily="@font/inter_bold"
                android:text="@string/username" />

            <EditText
                android:id="@+id/editTxtUsername"
                style="@style/CustomEditText"
                android:fontFamily="@font/inter_medium"
                android:inputType="text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="Username"
                android:textColorHint="@color/purple_200"
                />

            <TextView
                android:id="@+id/textView"
                style="@style/TxtPrimaryStyle"
                android:fontFamily="@font/inter_bold"
                android:text="@string/name" />

            <EditText
                android:id="@+id/editTxtName"
                style="@style/CustomEditText"
                android:fontFamily="@font/inter_medium"
                android:inputType="text"
                android:hint="Name"
                android:textColorHint="@color/purple_200"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                />

            <TextView
                style="@style/TxtPrimaryStyle"
                android:fontFamily="@font/inter_bold"
                android:text="@string/email" />

            <EditText
                android:id="@+id/editTxtEmailAddress"
                style="@style/CustomEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:fontFamily="@font/inter_medium"
                android:inputType="textEmailAddress"
                android:hint="Email"
                android:textColorHint="@color/purple_200"
                />

            <TextView
                style="@style/TxtPrimaryStyle"
                android:fontFamily="@font/inter_bold"
                android:text="Password:" />

            <EditText
                android:id="@+id/editTxtPassword"
                style="@style/CustomEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:focusable="true"
                android:clickable="true"
                android:fontFamily="@font/inter_medium"
                android:inputType="textPassword"
                android:hint="Password"
                android:textColorHint="@color/purple_200"
                 />

            <TextView
                style="@style/TxtPrimaryStyle"
                android:fontFamily="@font/inter_bold"
                android:text="Confirm Password:" />

            <EditText
                android:id="@+id/editTxtConfirmPassword"
                style="@style/CustomEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:fontFamily="@font/inter_medium"
                android:inputType="textPassword"
                android:hint="@string/confirm_password"
                android:textColorHint="@color/purple_200"
                 />


            <FrameLayout
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="10dp">

                <ImageButton
                    android:id="@+id/btnRegister"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/btnregisterbg"
                    android:padding="10dp"
                    android:visibility="visible" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:fontFamily="@font/inter_bold"
                    android:text="Register"
                    android:textColor="@color/white"
                    android:textSize="20sp" />
            </FrameLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/inter_medium"
                android:text="Already have an account?"
                android:textAlignment="textStart"
                android:textColor="@color/PrimaryTxtColor"
                android:textSize="20sp" />

            <Button
                android:id="@+id/btnLogin"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:background="#00000000"
                android:fontFamily="@font/inter_bold"
                android:text="@string/click_here_to_login"
                android:textColor="@color/LinkBlue" />
           </LinearLayout>


    </LinearLayout>



</ScrollView>